# ComfyUI_IndustrialMagick

./: LICENSE  README.md  __init__.py  industrial_magick.py  pyproject.toml
demo/: Industrial_Magick_demo.json  Industrial_Magick_demo1.json  Industrial_Magick_demo2.json  Industrial_Magick_demo3.json
js/: paramVisibility.js
