[project]
name = "comfyui_industrialmagick"
description = "[a/ImageMagick](https://imagemagick.org/index.php) nodes for ComfyUI. Adds nodes to call ImageMagick subprocesses from ComfyUI.\nRequirements: [a/ImagMagick7](https://imagemagick.org/script/download.php), 'magick' command in your CLI environment."
version = "2.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/my-opencode/ComfyUI_IndustrialMagick"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "industrialvectors"
DisplayName = "ComfyUI_IndustrialMagick"
Icon = "https://raw.githubusercontent.com/my-opencode/ComfyUI_IndustrialMagick/main/logo-small.png"
